# durian

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  doc.yaml
docs/example/: app.py
durian/: api.py  types.py  wrappers.py
example/: app.py
src/durian/: __init__.py  api.py  globals.py  types.py  utils.py  wrappers.py
